@@ -1,6 +1,7 @@
 package springpractice.shoppingmall.Service;
 
 import jakarta.transaction.Transactional;
+import org.aspectj.weaver.ast.Or;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import springpractice.shoppingmall.DTO.OrderDetailResponseDto;
@@ -27,20 +28,30 @@ public class OrderService {
     public OrderService(OrderRepository orderRepository, ProductRepository productRepository, OrderProductRepository orderProductRepository) {
         this.orderRepository = orderRepository;
         this.productRepository = productRepository;
+        this.orderProductRepository = orderProductRepository;
     }
 
     public ResponseEntity<String> saveOrder(SaveOrderDto dto) {
-        List<Long> productIds = dto.getProductDtos().stream().map(p->p.getProductId()).toList();
+        List<Long> productIds = dto.getProducts().stream().map(p->p.getProductId()).toList();
                 for (Long productId : productIds) {
             Product product = productRepository.findById(productId).orElse(null);
             if (product == null) {
                 throw new IllegalArgumentException("없는 상품을 주문할 수 없음");
             }
         }
-        Order order = new Order(dto.getProductDtos().stream().map(p ->
-                        new OrderProduct(p.getProductId(),p.getPrice(),p.getQuantity()
-                )).toList());
+                List <OrderProduct> orderProducts = dto.getProducts().stream().map(p->
+                        new OrderProduct(p.getProductId(),p.getPrice(),p.getQuantity())).toList();
+
+                Order order = new Order(orderProducts);
+                for(OrderProduct orderProduct : orderProducts){
+                orderProduct.setOrder(order);
+                }
+            //위에 두 줄 안쓰고 repository.saveAll 하고 리스트로 저장한 다음에 디버깅 해보면...
+            //오더프로덕트의 오더 아이디가 널 값으로 들어간다. 그래서 오더를 조회하면 오더프로덕트가 안나옴.
+            //따라서 OrderProduct들이 어떤 Order에 속하는것인지 setter로 지정해줘야한다
+
                 orderRepository.save(order);
+
         return ResponseEntity.ok("저장완료");
     }
 
@@ -48,12 +59,11 @@ public class OrderService {
     public ResponseEntity<OrderDetailResponseDto> findOrder(Long orderId) {
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 주문이 존재하지 않습니다."));
-        List<OrderProductDto> orderProduct = order.getProductList().stream()
+        List<OrderProductDto> orderProduct = order.getProducts().stream()
                 .map(p -> new OrderProductDto(
                         p.getId(),
                         p.getPrice(),
-                        p.getQuantity()))
-                .collect(Collectors.toList());
+                        p.getQuantity())).toList();
         OrderDetailResponseDto orderResponse = new OrderDetailResponseDto(order.getId(),orderProduct,
                 getTotalPrice(order.getId()));
         return ResponseEntity.ok(orderResponse);
